# QtBeginner

./: .gitignore  CMakeLists.txt  QtBeginner.pro  README.md
src/: CMakeLists.txt  mainwidget.cpp  mainwidget.h
